# Penguin

./: .gitignore  Cargo.toml  DangerFunc.toml  I18N_README.md  README.zh-CN.md  README_LANGUAGE_SWITCHING.md  build.rs  next-update.md  readme.md
config/: language.toml
src/: cli.rs  gui.rs  i18n.rs  lib.rs  main.rs  tools_api.rs
src/gui/: center_panel.rs  left_panel.rs  toast_window.rs  top_header_panel.rs
src/gui/center_panel/: dos_header.rs  dos_stub.rs  export_table.rs  import_table.rs  nt_header.rs  section.rs
src/tools_api/: calc.rs  file_system.rs  read_file.rs  serde_pe.rs  toml.rs  write_file.rs
src/tools_api/read_file/: dos_header.rs  dos_stub.rs  export.rs  import.rs  nt_header.rs  resource_header.rs  section_headers.rs
test_pe/: steam_api.bak1  steam_api64.bak0
