[package]
name = "Penguin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { features =["full"] ,version = "1.45.1" }
anyhow = "1.0.98"
rfd = "0.15.3"
eframe = "0.32.0"
libc = "0.2.174"
sha-1 = "0.10.0"
md-5 = "0.10.0"
file-hashing = "0.1.2"
toml = "0.9.5"
serde = {version = "1.0.219"}
serde_derive = "1.0.219"
serde_json = "1.0.142"

[build-dependencies]
toml = "0.9.5"
[profile.release]
debug = true